--- a/page.yaml
+++ b/page.yaml
@@ -1,25 +1,28 @@
 direktiv_api: page/v1
 blocks:
-  - type: columns
-    blocks:
-      - type: column
-        blocks:
-          - type: text
-            content: column 1 text
-      - type: column
-        blocks:
-          - type: text
-            content: column 2 text
   - type: card
     blocks:
-      - type: card
+      - type: dialog
+        trigger:
+          type: button
+          label: Create Company
         blocks:
-          - type: text
-            content: text block in 2 cards
+          - type: form
+            trigger:
+              type: button
+              label: Search
+            mutation:
+              id: create-company
+              method: POST
+              baseUrl: "/ns/demo/company"
+            blocks:
+              - type: headline
+                level: h3
+                label: Create Company
   - type: query-provider
     queries:
       - id: company-list
-        endpoint: "/ns/demo/companies"
+        baseUrl: "/ns/demo/companies"
         queryParams:
           - key: query
             value: my-search-query
@@ -27,6 +30,19 @@ blocks:
       - type: headline
         level: h3
         label: Found {{query.company-list.total}} companies
+      - type: dialog
+        trigger:
+          type: button
+          label: Create Company
+        blocks:
+          - type: query-provider
+            queries:
+              - id: company-list2
+                baseUrl: "/ns/demo/companies/{{query.company-list.data.0.id}}"
+                queryParams:
+                  - key: query
+                    value: "{{query.company-list.data.0.id}}"
+            blocks: []
       - type: table
         data:
           type: loop
