--- a/examples/crud/routes/delete-persons.yaml
+++ b/examples/crud/routes/delete-persons.yaml
@@ -1,7 +1,7 @@
 x-direktiv-api: endpoint/v2
 x-direktiv-config:
   allow_anonymous: true
-  path: /persons
+  path: /delete-all-persons
   plugins:
     auth: []
     inbound: []
