--- a/examples/crud/workflows/set-initial-data.yaml
+++ b/examples/crud/workflows/set-initial-data.yaml
@@ -13,7 +13,7 @@ states:
       input:
         method: "GET"
         url: "https://reqres.in/api/users?page=2"
-    transform: "jq({data: .return[0].result.data})"
+    transform: "jq({data: .return[0].result.data, total: 10})"
     transition: store-data
   - id: store-data
     type: setter
