--- a/examples/crud/crud-demo.yaml
+++ b/examples/crud/crud-demo.yaml
@@ -23,6 +23,25 @@ blocks:
               energetic leadership and iconic rise from pop culture mascot to
               business figure. With a shockingly sharp strategy, he leads with
               agility, loyalty, and charm.
+          - type: dialog
+            trigger:
+              type: button
+              label: Read more
+            blocks:
+              - type: text
+                content:
+                  Under Pikachu's leadership, ThunderCorp has expanded into cutting-edge
+                  sectors including sustainable energy, gamified wellness
+                  platforms, and AI-driven entertainment. His approach blends
+                  instinctive decision-making with deep emotional intelligence,
+                  earning him a reputation as both a visionary and a team-first
+                  executive. Despite his small stature, Pikachu commands
+                  attention in boardrooms worldwide, often communicating through
+                  subtle gestures, electrifying presence, and the occasional
+                  “Pika” punctuated with purpose. A firm believer in
+                  evolution—both personal and organizational—he champions growth
+                  through adaptation, partnership, and a relentless commitment
+                  to staying one step ahead in an ever-changing landscape.
   - type: query-provider
     queries:
       - id: persons
