--- a/examples/crud/crud-demo.yaml
+++ b/examples/crud/crud-demo.yaml
@@ -3,7 +3,7 @@ type: page
 blocks:
   - type: headline
     level: h1
-    label: Company Overview
+    label: ThunderCorp International
   - type: columns
     blocks:
       - type: column
