fix delete persons workflow

--- a/examples/crud/workflows/delete-all-persons.yaml
+++ b/examples/crud/workflows/delete-all-persons.yaml
@@ -7,5 +7,5 @@ states:
     variables:
       - key: persons
         scope: namespace
-        value: { data: [] }
+        value: { "total": 0, data: [] }
         mimeType: application/json
