fix old default value

--- a/examples/prefilled-form/pre-filled-form.yaml
+++ b/examples/prefilled-form/pre-filled-form.yaml
@@ -70,7 +70,7 @@ blocks:
                         defaultValue: 2025-12-24
                       - id: static-select
                         label: static select
-                        description: default value is always two
+                        description: default value is always free
                         optional: false
                         type: form-select
                         values:
