--- a/examples/prefilled-form/pre-filled-form.yaml
+++ b/examples/prefilled-form/pre-filled-form.yaml
@@ -47,19 +47,29 @@ blocks:
               value: "{{query.user.data.status}}"
           requestBody:
             - key: string-input
-              value: "{{this.form.string}}"
-            - key: textarea
-              value: "{{this.form.textarea}}"
-            - key: checkbox
-              value: "{{this.form.dynamic-checkbox}}"
-            - key: number-input
-              value: "{{this.form.dynamic-number-input}}"
-            - key: dateicker
-              value: "{{this.form.dynamic-date}}"
-            - key: select
-              value: "{{this.form.dynamic-select}}"
-            - key: query-provider
-              value: "{{query.user.data.status}}"
+              value:
+                type: string
+                value: "{{this.form.string}}"
+            - key: boolean
+              value:
+                type: boolean
+                value: true
+            - key: number
+              value:
+                type: number
+                value: 1
+            - key: variable-object
+              value:
+                type: variable
+                value: query.user.data
+            - key: variable-boolean
+              value:
+                type: variable
+                value: query.user.data.emailVerified
+            - key: variable-number
+              value:
+                type: variable
+                value: query.user.data.accountBalance
         blocks:
           - type: headline
             level: h1
@@ -112,7 +122,7 @@ blocks:
                         description: default value is always 2025-12-24
                         optional: false
                         type: form-date-input
-                        defaultValue: 2025-12-24
+                        defaultValue: 2025-12-24T00:00:00.000Z
                       - id: static-select
                         label: static select
                         description: default value is always free
