--- a/examples/prefilled-form/user-details.yaml
+++ b/examples/prefilled-form/user-details.yaml
@@ -12,11 +12,7 @@ x-direktiv-config:
         status_message: >
           {
             "meta": {
-              "subscriptionPlanOptions": [
-                { "value": "free", "label": "Free Plan" },
-                { "value": "pro", "label": "Pro Plan" },
-                { "value": "enterprise", "label": "Enterprise Plan" }
-              ]
+              "subscriptionPlanOptions": ["free", "pro", "enterprise"]
             },
             "data": {
               "status": "ok",
