--- a/examples/crud/crud-demo.yaml
+++ b/examples/crud/crud-demo.yaml
@@ -56,6 +56,7 @@ blocks:
           type: loop
           id: person
           data: query.persons.data
+          pageSize: 10
         actions:
           - type: button
             label: edit
