--- a/tdi-33-demo/page.yaml
+++ b/tdi-33-demo/page.yaml
@@ -12,6 +12,7 @@ blocks:
       - type: loop
         id: company
         data: query.company-list.data
+        pageSize: 10
         blocks:
           - type: columns
             blocks:
